--- a/css/style.css
+++ b/css/style.css
@@ -42,11 +42,12 @@
     list-style-type: none;
     text-decoration: none;
     align-items: flex-end;
-    padding: 0 25px;
+    margin-right: 30px;
+    font-size: 15px;
 }
 
 .nav__pages{
-    margin-top: 15%;
+    margin-top: 100px;
     display: grid;
 grid-template-columns: repeat(4, 100px);
 grid-column-gap: 50px ;
@@ -244,7 +245,7 @@ transition: all 1s;
 .footer{
     background: linear-gradient(to top, #2371a8 , white );
     margin-top: 100px;
-    height:  150px;
+    height:  163px;
 }
 
 .ol__footer{
@@ -304,6 +305,7 @@ transition: all 1s;
     justify-items: center;
     align-items: center;
 }
+
 
 .img__pagos{
     display: grid;
