--- a/css/style.css
+++ b/css/style.css
@@ -414,6 +414,10 @@ transition: all 1s;
     text-align: end;
 }
 
+.video__sabiasque{
+    width: 500px;
+}
+
 @media only screen and (max-width:425px) {
 
 .header{
@@ -619,7 +623,7 @@ transition: all 1s;
 }
 
 .nav__pages{
-    margin-top: 200px;
+    margin-top: 100px;
     display: grid;
     grid-template-columns: repeat(4, 100px);
     grid-column-gap: 50px ;
