--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 .h1__index{
     font-size: 80px;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 .h1__pages{
@@ -262,9 +262,23 @@ transition: all 1s;
 
 .section__repuesto{
     text-align: justify;
-    margin-top: 100px;
+    margin-top: 30px;
     margin-bottom: 20px;
 }
+
+.section__sabiasque__carroceria{
+display: grid;
+grid-template-columns: 50% 50%;
+align-items: center;
+justify-items: center;
+
+}
+
+.video__carroceria{
+    display: grid;
+    align-items: center;
+}
+
 .boton__buscar  {
     padding: 5px 100px;
     font-size: 21px;
@@ -313,10 +327,7 @@ transition: all 1s;
 
 /* desde aca empieza css de la pagina service.html */
 
-.img__fondo__service{
-    margin-top: 15%;
-    background: linear-gradient(#2371a8 , white );
-}
+
 
 .fondo__service{
     position: relative;
@@ -418,7 +429,9 @@ transition: all 1s;
     width: 500px;
 }
 
-@media only screen and (max-width:425px) {
+ @media only screen and (max-width:425px) {
+
+/*index*/
 
 .header{
         background: linear-gradient(#2371a8 , white );
@@ -435,8 +448,9 @@ transition: all 1s;
 .nav__pages{
     margin-top: 8rem;
     display: grid;
-    grid-template-columns: repeat(3, 35px);
-    /* grid-column-gap: 50px ; */
+    grid-template-columns: repeat(3, 35px)
+}
+    /* grid-column-gap: 50px ; 
     grid-template-rows: repeat(2, 57px);
     grid-row-gap: 2.5rem;
     align-items: center;
@@ -449,12 +463,11 @@ transition: all 1s;
     text-align: center;
     font-size: 15px;
     
-}
-
+}*/
 .h2__viajero{
     font-size: 17px;
     margin-top: 10px;
-    /* background: linear-gradient(#c0d7e9  , white ); */
+    background: linear-gradient(#c0d7e9  , white ); 
 }
 
 .div__atencion__hijos img {
@@ -588,18 +601,37 @@ transition: all 1s;
     height: 35px;
     align-items: center;
 }
+
+/*  serivicio */
+
+.img__fondo__service{
+   height: 200px;
+}
+
 .ol__footer{
     text-align: center;
     list-style-type: none;
-    font-size: 14px;}
+    font-size: 10px;
+    margin-bottom: 0;
 }
+/* Pages Bombas */
 
-/* implementando bs */
+.img__pagos1{
+    height:50px ;
+}
+.img__pagos2{
+    height: 80px;
+}
+/* pages electricidad */
+.img__marcas__electroinca1{
+height: 50px;
 
-
-
+}
+} 
 @media only screen and (min-width:768px) and (max-width:1024px)
 {
+
+    /*index*/
 .header{
     background: linear-gradient(#2371a8 , white );
     height: 130px;
@@ -608,7 +640,7 @@ transition: all 1s;
 .h1__index{
     font-size: 70px;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 40px;
 }
 .section__pages{
     display: grid;
@@ -671,10 +703,10 @@ transition: all 1s;
 .div__atencion{
     display: grid;
     grid-template-columns: repeat(3, 257px);
-    grid-template-rows: repeat(2,180px);
+    grid-template-rows: repeat(2,205px);
     align-items: center;
     justify-content: center;
-    margin-top: 10px;
+    margin-top: 60px;
 }
 
 .h2__nosotros{
@@ -715,11 +747,13 @@ transition: all 1s;
     background: linear-gradient( #c0d7e9,white  );
     width: 100%;
 }
-} /* @media only screen  pages bombas */
+
+/*pages bombas */
+
+} 
 
 @media only screen and (max-width:425px)
 {
-
 
     .header{
         background: linear-gradient(#2371a8 , white );
